Handle ReservedDays update inside the Reservation class, so update are well persisted
